--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "jshint *.js --exclude node_modules && jscs *.js",
     "lint-win": "jshint index.js test.js --exclude node_modules && jscs index.js test.js",
     "test": "mocha --timeout 30000 && npm run-script lint",
+    "test-only": "mocha --timeout 30000",
     "test-win": "mocha --timeout 30000 && npm run-script lint-win"
   },
   "repository": {
@@ -33,15 +34,15 @@
     "config": ">=3.X <4.X"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "config": ">=3.X <4.X",
     "conventional-changelog-core": "3.0.0",
     "git-dummy-commit": "^1.3.0",
     "jscs": "^3.0.7",
-    "jshint": "^2.9.5",
+    "jshint": "^2.10.2",
     "mocha": "*",
-    "shelljs": "^0.8.2",
-    "through2": "^2.0.3"
+    "shelljs": "^0.8.3",
+    "through2": "^3.0.1"
   },
   "dependencies": {
     "q": "^1.5.1"
