--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Fork of conventional-changelog SportHeroesGroup backend preset",
   "main": "index.js",
   "scripts": {
-    "lint": "jshint *.js --exclude node_modules && jscs *.js",
-    "lint-win": "jshint index.js test.js --exclude node_modules && jscs index.js test.js",
+    "lint": "npm run lint:syntax:check",
+    "lint:ci": "npm run lint:syntax:check:ci",
+    "lint:syntax:check": "cross-env FORCE_COLOR=1 eslint --fix --cache --report-unused-disable-directives .",
+    "lint:syntax:check:ci": "cross-env FORCE_COLOR=1 eslint --report-unused-disable-directives .",
     "test": "mocha --timeout 30000 && npm run-script lint",
     "test-only": "mocha --timeout 30000",
     "test-win": "mocha --timeout 30000 && npm run-script lint-win"
@@ -34,14 +36,29 @@
     "config": ">=3.X"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.28.6",
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": ">=9.39.2 <10.X",
     "chai": ">=4.5.0 <5.X",
     "config": "4.3.0",
-    "conventional-changelog-core": ">=5.0.2 <6.X",
-    "git-dummy-commit": "^1.3.0",
+    "conventional-changelog-core": ">=7.0.0 <8.X",
+    "cross-env": "10.1.0",
+    "eslint-plugin-chai-expect": "3.1.0",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-mocha": "11.2.0",
+    "eslint-plugin-no-relative-import-paths": "1.6.1",
+    "eslint-plugin-n": "17.23.2",
+    "eslint-plugin-promise": "7.2.1",
+    "eslint-plugin-regexp": "3.0.0",
+    "eslint-plugin-secure-coding": "3.1.3",
+    "eslint-plugin-sort-destructure-keys": "2.0.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "get-tsconfig": "4.13.6",
+    "globals": "17.3.0",
     "jscs": "3.0.7",
     "jshint": "2.13.6",
     "mocha": "11.7.5",
-    "shelljs": "0.10.0",
     "through2": "4.0.2"
   },
   "dependencies": {
